[gd_scene load_steps=2 format=3 uid="uid://copvvn4iajrk5"]

[ext_resource type="Script" path="res://scripts/gui/inventory_slot.gd" id="1_0mmwx"]

[node name="InventorySlot" type="Panel"]
custom_minimum_size = Vector2(64, 64)
offset_right = 32.0
offset_bottom = 32.0
script = ExtResource("1_0mmwx")

[node name="ItemTexture" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
mouse_filter = 2
stretch_mode = 5

[node name="Quantity" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 2
vertical_alignment = 2

[node name="Shortcut" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "1"

[connection signal="mouse_entered" from="ItemTexture" to="." method="_on_item_texture_mouse_entered"]
[connection signal="mouse_exited" from="ItemTexture" to="." method="_on_item_texture_mouse_exited"]
